--- a/src/UI/HTML/welcome.html
+++ b/src/UI/HTML/welcome.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexile Overlay</title>
     <style>
         html, body {
@@ -9,21 +10,147 @@
             padding: 0;
             width: 100%;
             height: 100%;
-            background: #000;
-            color: #fff;
-            font-family: "Segoe UI", Arial, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            background-color: rgba(0, 0, 0, 0.75);
+            color: white;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            overflow: hidden;
         }
 
-        h1 {
-            font-size: 2.5rem;
-            letter-spacing: 2px;
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            padding: 20px;
+            box-sizing: border-box;
         }
+
+        .logo {
+            font-size: 48px;
+            font-weight: bold;
+            margin-bottom: 20px;
+            color: #4a90e2;
+        }
+
+        .subtitle {
+            font-size: 18px;
+            margin-bottom: 40px;
+            text-align: center;
+        }
+
+        .hotkeys {
+            background-color: rgba(40, 40, 40, 0.7);
+            border-radius: 8px;
+            padding: 15px 25px;
+            margin: 10px 0;
+            width: 80%;
+            max-width: 600px;
+        }
+
+            .hotkeys h2 {
+                color: #4a90e2;
+                margin-top: 0;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+                padding-bottom: 10px;
+            }
+
+        .hotkey-item {
+            display: flex;
+            justify-content: space-between;
+            margin: 10px 0;
+            padding: 5px 0;
+        }
+
+        .hotkey-combo {
+            background-color: rgba(30, 30, 30, 0.8);
+            padding: 5px 10px;
+            border-radius: 4px;
+            min-width: 80px;
+            text-align: center;
+            margin-left: 20px;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 20px;
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 14px;
+        }
+
+        .controls {
+            margin-top: 20px;
+        }
+
+        .button {
+            display: inline-block;
+            background-color: #4a90e2;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 4px;
+            text-decoration: none;
+            margin: 0 10px;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+
+            .button:hover {
+                background-color: #3a80d2;
+            }
     </style>
 </head>
 <body>
-    <h1>Welcome to Nexile Overlay</h1>
+    <div class="container">
+        <div class="logo">NEXILE</div>
+        <div class="subtitle">Game Overlay Assistant</div>
+
+        <div class="hotkeys">
+            <h2>Default Hotkeys</h2>
+            <div class="hotkey-item">
+                <span>Toggle Overlay</span>
+                <span class="hotkey-combo">Ctrl+F1</span>
+            </div>
+            <div class="hotkey-item">
+                <span>Price Check (PoE)</span>
+                <span class="hotkey-combo">Alt+D</span>
+            </div>
+            <div class="hotkey-item">
+                <span>Open Settings</span>
+                <span class="hotkey-combo">Ctrl+F2</span>
+            </div>
+        </div>
+
+        <div class="controls">
+            <a href="#" class="button" id="settings-button">Settings</a>
+            <a href="#" class="button" id="close-button">Close Overlay</a>
+        </div>
+
+        <div class="footer">Nexile v0.1.0 | Press Ctrl+F1 to toggle overlay</div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Setup button event handlers
+            document.getElementById('settings-button').addEventListener('click', function() {
+                // Send message to C++ host to open settings
+                window.chrome.webview.postMessage(JSON.stringify({
+                    action: 'open_settings'
+                }));
+            });
+
+            document.getElementById('close-button').addEventListener('click', function() {
+                // Send message to C++ host to close/hide overlay
+                window.chrome.webview.postMessage(JSON.stringify({
+                    action: 'toggle_overlay'
+                }));
+            });
+
+            // Listen for messages from the C++ host
+            window.chrome.webview.addEventListener('message', function(event) {
+                const message = JSON.parse(event.data);
+                // Handle messages from C++ host if needed
+            });
+        });
+    </script>
 </body>
 </html>
